# mcpgen

./: .gitignore  .windsurfrules  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md
.cargo/: audit.toml
.github/workflows/: ci.yml
crates/agenterra-cli/: Cargo.toml
crates/agenterra-cli/src/: main.rs
crates/agenterra-cli/tests/: e2e_mcp_test.rs
crates/agenterra-client/: Cargo.toml
crates/agenterra-client/src/: auth.rs  cache.rs  client.rs  error.rs  lib.rs  registry.rs  resource.rs  result.rs  transport.rs
crates/agenterra-core/src/: lib.rs
crates/agenterra-mcp/: Cargo.toml
crates/agenterra-mcp/src/: generate.rs  lib.rs  manifest.rs
crates/agenterra-mcp/src/builders/: mod.rs  rust.rs
crates/agenterra-mcp/src/templates/: dir.rs  kind.rs  manager.rs  mod.rs  options.rs  types.rs
crates/mcpgen-cli/: Cargo.toml
crates/mcpgen-cli/src/: main.rs
crates/mcpgen-cli/tests/: integration_test.rs
crates/mcpgen-cli/tests/test_utils/: mod.rs
crates/mcpgen-core/: Cargo.toml
crates/mcpgen-core/src/: config.rs  lib.rs  manifest.rs  openapi.rs  template.rs  template_kind.rs  template_manager.rs
crates/mcpgen-core/src/template/: mod.rs
docs/: AGENT_INSTRUCTIONS.md  CLI_REFERENCE.md  CONFIGURATION.md  TEMPLATES.md
templates/mcp/client/rust_reqwest/: Cargo.toml.tera  README.md.tera  manifest.yaml
templates/mcp/client/rust_reqwest/src/: cache.rs.tera  client.rs.tera  error.rs.tera  main.rs.tera  repl.rs.tera  resource.rs.tera
templates/mcp/server/rust_axum/: Cargo.toml.tera  LICENSE  common.rs.tera  config.rs.tera  handler.rs.tera  handlers_mod.rs.tera  manifest.yaml  server.rs.tera
templates/rust-axum/: Cargo.toml.tera  common.rs.tera  handler.rs.tera  handlers_mod.rs.tera  main.rs.tera  manifest.yaml
