[workspace]
members = [
    "crates/agenterra-core",
    "crates/agenterra-mcp",
    "crates/agenterra-cli",
    "crates/agenterra-client",
]
resolver = "2"

[workspace.dependencies]
toml = "0.8"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
futures = "0.3"
log = "0.4"
once_cell = "1.19"
openapiv3 = "2.1.0"
regex = "1.9"
reqwest = { version = "0.11", features = [
    "json",
    "stream",
    "rustls-tls",
], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-value = "0.7"
serde_yaml = "0.9"
tera = "1.19"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.0", features = ["env-filter"] }
url = { version = "2.4", features = ["serde"] }
tempfile = "3.10"
