[package]
name = "agenterra-mcp"
version = "0.1.0"
edition = "2024"
description = "MCP server and client generation from OpenAPI specs"
license = "MIT"

[dependencies]
agenterra-core = { path = "../agenterra-core" }
anyhow = { workspace = true }
clap = { workspace = true }
dirs = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
once_cell = { workspace = true }
openapiv3 = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde-value = { workspace = true }
serde_yaml = { workspace = true }
tera = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-test = "0.2"